--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,5 @@
 .content{
-  width: 500px;
   max-width: 90%;
-  margin: 0 auto;
-  margin-top: 30px;
   text-align: center;
 }
 .mdl-card{
@@ -10,14 +7,16 @@
   margin-bottom: 10px;
 }
 .header {
-    background: url(../img/border.png) repeat-x 0px 0px #FFF;
-    color: black;
+  background: url(../img/border.png) repeat-x 0px 0px #FFF;
+  color: black;
 }
 .menu{
   color: grey;
 }
 footer{
   bottom:0;
+  position:relative;
+  height: 100px;
   border-top: solid;
   text-align: center;
   padding:10px;
